# pyinfra-orbstack

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pytest-fast.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  cleanup_test_vms.py  pyproject.toml  test_deploy_simple.py
.github/workflows/: ci.yml  publish.yml
docs/: 20250116-end-to-end-testing.md  20250116-immediate-recommendations-implementation-summary.md  20250116-package-namespace-structure.md  20250116-pyinfra-operations-issue-analysis.md  20251021-improving-decorator-coverage.md  20251023-phase3-feasibility-analysis.md  20251025-benchmark-guide.md  20251025-bug-fix-complete-success.md  20251025-bug-fix-final-complete.md  20251025-debugging-improvements-implementation.md  20251025-final-summary-priority-implementation.md  20251025-final-test-results-complete.md  20251025-live-test-monitoring.md  20251025-phase4-testing-assessment.md  20251025-priority-1-2-implementation.md  20251025-test-cleanup-improvements.md  20251025-test-results-post-optimization.md  20251025-test-suite-analysis.md  20251025-test-timing-guide.md  20251025-test-vm-management-centralization.md  20251025-test-vm-management-complete-solution.md  20251025-test-vm-management-implementation-summary.md  20251025-test-vm-management-minimal.md  20251025-test-vm-management-simple.md  20251025-test-vm-naming-simplified.md  20251025-test-vm-parallel-optimization.md  20251025-test-vm-readiness-and-parameters.md  20251025-timeout-analysis-not-about-time.md  20251025-timing-measurements-enhancement.md  20251026-coverage-100-percent-achieved.md  20251026-final-success-100-percent.md  README.md  running-tests.md  test-implementation-analysis.md  test-optimization-phase1.md  test-suite-refactoring-analysis.md  testing-and-coverage-methodology.md
docs/adrs/: 0001-package-namespace.md  0002-advanced-operations-scope.md  0003-multi-level-testing-strategy.md  0004-session-scoped-test-vms.md  0005-intelligent-retry-logic.md  0006-operation-generator-pattern.md  0007-simple-logging-based-timing.md  0008-automated-version-management.md  0009-gevent-python312-compatibility.md  README.md
docs/dev-journal/: 20250116-test-analysis-and-deployment-evaluation.md  20251021-running-tests.md  20251021-test-suite-refactoring-analysis.md  20251021-testing-and-coverage-methodology.md  20251023-phase3-feasibility-analysis.md  20251025-diagnostic-results-analysis.md  20251025-orbstack-timeout-analysis.md  20251025-process-analysis-recommendations.md  20251025-test-vm-management-results.md  20251027-phase6-scope-evaluation.md  20251028-backup-operations-deferral.md  20251028-phase6-task6.1-timing-utility.md  20251028-phase7-assessment.md  20251028-python-39-support-decision.md  20251101-gevent-threading-warnings-investigation.md  20251101-version-management-implementation.md
docs/user-guide/: README.md  compatibility.md  known-limitations.md  migration-guide.md  timing-guide.md  troubleshooting.md
examples/: 01-basic-vm-deployment.py  02-multi-vm-deployment.py  03-vm-lifecycle-management.py  04-docker-deployment.py  05-dev-environment.py  README.md
examples/inventories/: README.md  environments.py  web-stack.py
src/pyinfra_orbstack/: __init__.py  connector.py  timing.py
src/pyinfra_orbstack/operations/: __init__.py  vm.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_connector.py  test_connector_coverage_e2e.py  test_e2e.py  test_integration.py  test_operations.py  test_orbstack_cli_mocks.py  test_pyinfra_deployment.py  test_pyinfra_deployment_working.py  test_pyinfra_operations_coverage.py  test_pyinfra_operations_e2e.py  test_timing.py  test_utils.py  test_vm_command_builders.py  test_vm_lifecycle_consolidated.py  test_vm_operations_integration.py  test_vm_operations_logic.py  test_vm_operations_phase2.py  test_vm_operations_unit.py
